Fix slack Join button. Fix alignment of prices and quantities on Exchange page. Remove "sell","buy" words in cancelling order transaction info.

--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -76,6 +76,9 @@
       }
     }
   }
+  .quantity-col {
+    min-width: 95px;
+  }
 }
 
 table {
